--- a/searchroom.html
+++ b/searchroom.html
@@ -73,13 +73,13 @@
 
         <!-- card bgins -->
 
-        <div class="card border-dark">
+        <div class="card border-dark m-1">
           <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="d-md-flex p-3">
+            <div class="p-3">
               <img src="/images/littlehome.jpg" alt="a home picure here" />
             </div>
 
-            <div id="room-content" class="p-1">
+            <div id="room-content" class="py-3">
               <p id="type-of-room" class="m-0">Single Room</p>
               <p id="kind-of-room" class="m-0">Self-contained</p>
               <p id="location-of-room" class="m-0">Osu,Accra</p>
@@ -95,13 +95,13 @@
 
         <!-- card bgins -->
 
-        <div class="card border-dark">
+        <div class="card border-dark m-1">
           <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="d-md-flex p-3">
+            <div class="p-3">
               <img src="/images/littlehome.jpg" alt="a home picure here" />
             </div>
 
-            <div id="room-content" class="p-1">
+            <div id="room-content" class="py-3">
               <p id="type-of-room" class="m-0">Single Room</p>
               <p id="kind-of-room" class="m-0">Self-contained</p>
               <p id="location-of-room" class="m-0">Osu,Accra</p>
@@ -117,13 +117,13 @@
 
         <!-- card bgins -->
 
-        <div class="card border-dark">
+        <div class="card border-dark m-1">
           <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="d-md-flex p-3">
+            <div class="p-3">
               <img src="/images/littlehome.jpg" alt="a home picure here" />
             </div>
 
-            <div id="room-content" class="p-1">
+            <div id="room-content" class="py-3">
               <p id="type-of-room" class="m-0">Single Room</p>
               <p id="kind-of-room" class="m-0">Self-contained</p>
               <p id="location-of-room" class="m-0">Osu,Accra</p>
@@ -139,13 +139,13 @@
 
         <!-- card bgins -->
 
-        <div class="card border-dark">
+        <div class="card border-dark m-1">
           <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="d-md-flex p-3">
+            <div class="p-3">
               <img src="/images/littlehome.jpg" alt="a home picure here" />
             </div>
 
-            <div id="room-content" class="p-1">
+            <div id="room-content" class="py-3">
               <p id="type-of-room" class="m-0">Single Room</p>
               <p id="kind-of-room" class="m-0">Self-contained</p>
               <p id="location-of-room" class="m-0">Osu,Accra</p>
@@ -161,13 +161,13 @@
 
         <!-- card bgins -->
 
-        <div class="card border-dark">
+        <div class="card border-dark m-1">
           <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="d-md-flex p-3">
+            <div class="p-3">
               <img src="/images/littlehome.jpg" alt="a home picure here" />
             </div>
 
-            <div id="room-content" class="p-1">
+            <div id="room-content" class="py-3">
               <p id="type-of-room" class="m-0">Single Room</p>
               <p id="kind-of-room" class="m-0">Self-contained</p>
               <p id="location-of-room" class="m-0">Osu,Accra</p>
@@ -183,13 +183,13 @@
 
         <!-- card bgins -->
 
-        <div class="card border-dark">
+        <div class="card border-dark m-1">
           <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="d-md-flex p-3">
+            <div class="p-3">
               <img src="/images/littlehome.jpg" alt="a home picure here" />
             </div>
 
-            <div id="room-content" class="p-1">
+            <div id="room-content" class="py-3">
               <p id="type-of-room" class="m-0">Single Room</p>
               <p id="kind-of-room" class="m-0">Self-contained</p>
               <p id="location-of-room" class="m-0">Osu,Accra</p>
@@ -205,35 +205,13 @@
 
         <!-- card bgins -->
 
-        <div class="card border-dark">
+        <div class="card border-dark m-1">
           <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="d-md-flex p-3">
+            <div class="p-3">
               <img src="/images/littlehome.jpg" alt="a home picure here" />
             </div>
 
-            <div id="room-content" class="p-1">
-              <p id="type-of-room" class="m-0">Single Room</p>
-              <p id="kind-of-room" class="m-0">Self-contained</p>
-              <p id="location-of-room" class="m-0">Osu,Accra</p>
-            </div>
-
-            <div id="price-box" class="p-3">
-              <p class="m-0"><b>300 Cedis</b></p>
-              <button class="dark" style="width: 100%">View</button>
-            </div>
-          </div>
-        </div>
-        <!-- end of card -->
-
-        <!-- card bgins -->
-
-        <div class="card border-dark">
-          <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="d-md-flex p-3">
-              <img src="/images/littlehome.jpg" alt="a home picure here" />
-            </div>
-
-            <div id="room-content" class="p-1">
+            <div id="room-content" class="py-3">
               <p id="type-of-room" class="m-0">Single Room</p>
               <p id="kind-of-room" class="m-0">Self-contained</p>
               <p id="location-of-room" class="m-0">Osu,Accra</p>
