--- a/searchroom.html
+++ b/searchroom.html
@@ -87,139 +87,10 @@
 
             <div id="price-box" class="p-3">
               <p class="m-0"><b>300 Cedis</b></p>
-              <button class="dark" style="width: 100%">View</button>
-            </div>
-          </div>
-        </div>
-        <!-- end of card -->
-
-        <!-- card bgins -->
-
-        <div class="card border-dark m-1">
-          <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="p-3">
-              <img src="/images/littlehome.jpg" alt="a home picure here" />
-            </div>
-
-            <div id="room-content" class="py-3">
-              <p id="type-of-room" class="m-0">Single Room</p>
-              <p id="kind-of-room" class="m-0">Self-contained</p>
-              <p id="location-of-room" class="m-0">Osu,Accra</p>
-            </div>
-
-            <div id="price-box" class="p-3">
-              <p class="m-0"><b>300 Cedis</b></p>
-              <button class="dark" style="width: 100%">View</button>
-            </div>
-          </div>
-        </div>
-        <!-- end of card -->
-
-        <!-- card bgins -->
-
-        <div class="card border-dark m-1">
-          <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="p-3">
-              <img src="/images/littlehome.jpg" alt="a home picure here" />
-            </div>
-
-            <div id="room-content" class="py-3">
-              <p id="type-of-room" class="m-0">Single Room</p>
-              <p id="kind-of-room" class="m-0">Self-contained</p>
-              <p id="location-of-room" class="m-0">Osu,Accra</p>
-            </div>
-
-            <div id="price-box" class="p-3">
-              <p class="m-0"><b>300 Cedis</b></p>
-              <button class="dark" style="width: 100%">View</button>
-            </div>
-          </div>
-        </div>
-        <!-- end of card -->
-
-        <!-- card bgins -->
-
-        <div class="card border-dark m-1">
-          <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="p-3">
-              <img src="/images/littlehome.jpg" alt="a home picure here" />
-            </div>
-
-            <div id="room-content" class="py-3">
-              <p id="type-of-room" class="m-0">Single Room</p>
-              <p id="kind-of-room" class="m-0">Self-contained</p>
-              <p id="location-of-room" class="m-0">Osu,Accra</p>
-            </div>
-
-            <div id="price-box" class="p-3">
-              <p class="m-0"><b>300 Cedis</b></p>
-              <button class="dark" style="width: 100%">View</button>
-            </div>
-          </div>
-        </div>
-        <!-- end of card -->
-
-        <!-- card bgins -->
-
-        <div class="card border-dark m-1">
-          <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="p-3">
-              <img src="/images/littlehome.jpg" alt="a home picure here" />
-            </div>
-
-            <div id="room-content" class="py-3">
-              <p id="type-of-room" class="m-0">Single Room</p>
-              <p id="kind-of-room" class="m-0">Self-contained</p>
-              <p id="location-of-room" class="m-0">Osu,Accra</p>
-            </div>
-
-            <div id="price-box" class="p-3">
-              <p class="m-0"><b>300 Cedis</b></p>
-              <button class="dark" style="width: 100%">View</button>
-            </div>
-          </div>
-        </div>
-        <!-- end of card -->
-
-        <!-- card bgins -->
-
-        <div class="card border-dark m-1">
-          <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="p-3">
-              <img src="/images/littlehome.jpg" alt="a home picure here" />
-            </div>
-
-            <div id="room-content" class="py-3">
-              <p id="type-of-room" class="m-0">Single Room</p>
-              <p id="kind-of-room" class="m-0">Self-contained</p>
-              <p id="location-of-room" class="m-0">Osu,Accra</p>
-            </div>
-
-            <div id="price-box" class="p-3">
-              <p class="m-0"><b>300 Cedis</b></p>
-              <button class="dark" style="width: 100%">View</button>
-            </div>
-          </div>
-        </div>
-        <!-- end of card -->
-
-        <!-- card bgins -->
-
-        <div class="card border-dark m-1">
-          <div id="result-1" class="d-flex p-0 justify-content-evenly">
-            <div class="p-3">
-              <img src="/images/littlehome.jpg" alt="a home picure here" />
-            </div>
-
-            <div id="room-content" class="py-3">
-              <p id="type-of-room" class="m-0">Single Room</p>
-              <p id="kind-of-room" class="m-0">Self-contained</p>
-              <p id="location-of-room" class="m-0">Osu,Accra</p>
-            </div>
-
-            <div id="price-box" class="p-3">
-              <p class="m-0"><b>300 Cedis</b></p>
-              <button class="dark" style="width: 100%">View</button>
+              <!-- to be changed -->
+              <button onclick="window.location.href='detailroom.html'">
+                View
+              </button>
             </div>
           </div>
         </div>
