--- a/detailroom.html
+++ b/detailroom.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Room Details</title>
+    <title>Room</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -36,7 +36,7 @@
         <!-- end of selected room detail -->
 
         <!-- start of room facilities card -->
-        <div class="card">
+        <div class="card mx-2">
         <ul class="list-group list-group-flush">
           <li
             class="list-group-item d-flex justify-content-between align-items-center"
